--- a/assets/css/loader.css
+++ b/assets/css/loader.css
@@ -1,5 +1,5 @@
 #preloader{
-    background: #000 url('../assets/images/preloader.gif') no-repeat center center;
+    background: #000 url('../images/preloader.gif') no-repeat center center;
     background-size: 300px;
     width:100%;
     height:100%;
