--- a/assets/css/loader.css
+++ b/assets/css/loader.css
@@ -1,10 +1,10 @@
 #preloader{
     background: #000 url('../images/preloader.gif') no-repeat center center;
     background-size: 300px;
-    width:100%;
-    height:100%;
+    background-color: black;
+    width:100vw;
+    height:100vh;
     top: 0;
-    overflow: hidden;
-    position: absolute;
-    z-index:9999;
+    position: fixed;
+    z-index:99999;
 }
